--- a/views/index.ejs
+++ b/views/index.ejs
@@ -90,6 +90,40 @@
       <% } %>
 
     </div>
+<!--Start RG code-->
+	<!--Signal Section-->
+	<div class="weather">
+		<h2>Signal Status</H2>
+		<form action="/fetch-signal" method="POST">
+			<input type="text" name="signalId" placeholder="Enter Junction ID e.g. Junction 5" required/>
+			<button type="submit">Get Signal</button>
+		</form>
+		<h3>Stream Signal</h3>
+		<input type="text" id="stream-signal-id" placeholder="Enter Junction ID"/>
+		<button onclick="startSignalStream()">Start Streaming</button>
+		<h3 id="live-signal" style="margin-top:10px; color:black; font-weight:bold;"></h3>
+		<% if (signalStatus) { %>
+			<p><strong>Signal:</strong><%=signalStatus.currentSignal%>|<%=signalStatus.timestamp%></p>
+		<% } %>
+		<% if (error) {%>
+			<div style="color:red; margin-top: 10px;"><%=error%></div>
+		<% } %>
+		<%if (success){%>
+			<div style="color: green; margin-top 10px;"><%= success %></div>
+		<% } %>
+		<h3>Update Signal</h3>
+		<form action="/update-signal" method="POST">
+			<input type="text" name="signalId" placeholder="Junction ID" required/>
+			<select name="currentSignal" required>
+				<option value="">Select Signal</option>
+				<option value="Red">Red</option>
+				<option value="Amber">Amber</option>
+				<option value="Green">Green</option>
+			</select>
+			<button type="submit">Update Signal</button>
+		</form>
+	</div>
+	<!--End RG code-->
   </body>
 
   <script>
@@ -126,6 +160,29 @@
         eventSource.close();
       });
     }
+  //Start RG code
+	let signalEventSource;
+	function startSignalStream(){
+		const signalId=document.getElementById("stream-signal-id").value;
+		const signalDisplay=document.getElementById("live-signal");
+		if (!signalId){
+			signalDisplay.textContent="Please enter Junction ID.";
+			return;
+		}
+		if (signalEventSource){
+			signalEventSource.close();
+		}
+		signalEventSource=new EventSource(`/stream-signal-sse?signalId=${encodeURIComponent(signalId)}`);
+		signalEventSource.onmessage= function (event){
+			const{signalId, currentSignal, timestamp}= JSON.parse(event.data);
+			signalDisplay.textContent=`${signalId}:${currentSignal}@${new Date(timestamp).toLocaleTimeString()}`;
+		};
+		signalEventSource.onerror= function(){
+			signalDisplay.textContent="Stream Ended";
+			signalEventSource.close();
+		};
+	}
+	//End RG code
   </script>
   
 </html>
