--- a/views/index.ejs
+++ b/views/index.ejs
@@ -93,7 +93,7 @@
 <!--Start RG code-->
 	<!--Signal Section-->
 	<div class="weather">
-		<h2>Signal Status</H2>
+		<h2>Traffic Signal Status</H2>
 		<form action="/fetch-signal" method="POST">
 			<input type="text" name="signalId" placeholder="Enter Junction ID e.g. Junction 5" required/>
 			<button type="submit">Get Signal</button>
