--- a/views/index.ejs
+++ b/views/index.ejs
@@ -94,13 +94,16 @@
 	<!--Signal Section-->
 	<div class="weather">
 		<h2>Traffic Signal Status</H2>
+		<!--Fetch signal status form with input field and submit button-->
 		<form action="/fetch-signal" method="POST">
 			<input type="text" name="signalId" placeholder="Enter Junction ID from 1 to 5 (e.g.'Junction 5')" required/>
 			<button type="submit">Get Signal</button>
 		</form>
 		<h3>Stream Live Traffic Signal</h3>
+		<!--Signal stream input and button-->
 		<input type="text" id="stream-signal-id" placeholder="Enter Junction ID from 1 to 5"/>
 		<button onclick="startSignalStream()">Start Streaming</button>
+		<!--Signal response display using conditional cases-->
 		<h3 id="live-signal" style="margin-top:10px; color:black; font-weight:bold;"></h3>
 		<% if (signalStatus) { %>
 			<p><strong>Signal:</strong><%=signalStatus.currentSignal%>|<%=signalStatus.timestamp%></p>
@@ -111,6 +114,7 @@
 		<%if (success){%>
 			<div style="color: green; margin-top 10px;"><%= success %></div>
 		<% } %>
+		<!--update signal status form with input field, traffic light dropdown and submit button-->
 		<h3>Update Traffic Signal</h3>
 		<form action="/update-signal" method="POST">
 			<input type="text" name="signalId" placeholder="Enter Junction ID from 1 to 5" required/>
@@ -162,25 +166,26 @@
     }
 
 	//Start RG code
+	//Declare variable
 	let signalEventSource;
 	function startSignalStream(){
 		const signalId=document.getElementById("stream-signal-id").value;
 		const signalDisplay=document.getElementById("live-signal");
-		if (!signalId){
+		if (!signalId){ //display message if no junction entered
 			signalDisplay.textContent="Please enter Junction ID.";
 			return;
 		}
 		if (signalEventSource){
-			signalEventSource.close();
+			signalEventSource.close();//close stream to prevent multiple streams opening
 		}
-		signalEventSource=new EventSource(`/stream-signal-sse?signalId=${encodeURIComponent(signalId)}`);
-		signalEventSource.onmessage= function (event){
+		signalEventSource=new EventSource(`/stream-signal-sse?signalId=${encodeURIComponent(signalId)}`); //new event source for streaming signal
+		signalEventSource.onmessage= function (event){ //event handler definition
 			const{signalId, currentSignal, timestamp}= JSON.parse(event.data);
-			signalDisplay.textContent=`${signalId}:${currentSignal}@${new Date(timestamp).toLocaleTimeString()}`;
+			signalDisplay.textContent=`${signalId}:${currentSignal}@${new Date(timestamp).toLocaleTimeString()}`;//Display info in human readable format
 		};
 		signalEventSource.onerror= function(){
-			signalDisplay.textContent="Stream Ended";
-			signalEventSource.close();
+			signalDisplay.textContent="Stream Ended";//message when stream ended
+			signalEventSource.close();//close stream
 		};
 	}
 	//End RG code
